--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,17 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- WebJars -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.1.1</version>
+        </dependency>
 
     </dependencies>
 
